Files project pagina_food_truck

--- a/pagina_food_truck/menu.html
+++ b/pagina_food_truck/menu.html
@@ -11,54 +11,54 @@
 <body>
     <nav class="se-gris padding-largo text-center">
         <ul class="no-lista">
-            <li class="col-md-3 inline-block">Food Truck</li>
-            <li class="col-md-3 inline-block">Contacto</li>
-            <li class="col-md-3 inline-block">Acerca de</li>
+            <li class="col-md-3 inline-block pacifico"><a href="index.html" class="mediano verde">Food Truck</a></li>
+            <li class="col-md-3 inline-block"><a href="contacto.html">Contacto</a></li>            
         </ul>        
     </nav>   
+
     <section>
-        <div class="text-center">
+        <div class="text-center mediano">
             <h2 class="pacifico grande azul">Menú</h2>
             <p>Todos los productos son preparados con procedimientos de calidad</p>
 
-            <div class="col-md-3 inline-block">
+            <div class="col-md-3 col-sm-4 inline-block">
                 <article>
                     <h3 class="pacifico">Hamburguesa</h3>
-                    <img src="imgs/hamburguesa.png" alt="hamburguesa" class="col-md-4 quitar-float">
+                    <img src="imgs/hamburguesa.png" alt="hamburguesa" class="col-4 col-md-5 quitar-float">
                     <p>
                         <strong>4USD</strong>
                     </p>
                 </article>
                 <article>
                     <h3 class="pacifico">Hot dog</h3>
-                    <img src="imgs/hotdog.png" alt="hamburguesa" class="col-md-4 quitar-float">
+                    <img src="imgs/hotdog.png" alt="hamburguesa" class="col-4 col-md-5 quitar-float">
                     <p>
                         <strong>2USD</strong>
                     </p>
                 </article>
             </div>
 
-            <div class="col-md-6 inline-block">
+            <div class="col-md-6 col-sm-4 inline-block vete-arriba">
                 <article>
                     <h3 class="pacifico">Ice cream</h3>
-                    <img src="imgs/icecream.png" alt="helado" class="col-md-4 quitar-float">
+                    <img src="imgs/icecream.png" alt="helado" class="col-4 col-md-4 quitar-float">
                     <p>
                         <strong>3USD</strong>
                     </p>
                 </article>
             </div>
 
-            <div class="col-md-3 inline-block">
+            <div class="col-md-3 col-sm-4 inline-block">
                 <article>
                     <h3 class="pacifico">Sandwich</h3>
-                    <img src="imgs/sandwich.png" alt="sandwich" class="col-md-4 quitar-float">
+                    <img src="imgs/sandwich.png" alt="sandwich" class="col-4 col-md-5 quitar-float">
                     <p>
                         <strong>3USD</strong>
                     </p>
                 </article>
                 <article>
                     <h3 class="pacifico">Soda</h3>
-                    <img src="imgs/hotdog.png" alt="soda" class="col-md-4 quitar-float img-soda">
+                    <img src="imgs/hotdog.png" alt="soda" class="col-4 col-md-5 quitar-float">
                     <p>
                         <strong>2USD</strong>
                     </p>
