--- a/pagina_food_truck/index.html
+++ b/pagina_food_truck/index.html
@@ -2,23 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">  
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <title>El mejor lugar para comer del mundo</title>
 </head>
 <body>
-    <div class="col-md-4 mx-auto quitar-float espacio-arriba text-center">
-        <img src="imgs/icecream.png" alt="icecream image">
-        <h1 class="pacifico grande verde">Food Truck</h1>
-        <h2>Ven, come y diviértete</h2>
-            
-        <nav>
-            <a href="menu.html" class="espacio-derecha">Menú</a>
-            <a href="contacto.html" class="espacio-derecha">Contacto</a>
-            <a href="">Acerca de</a>
-        </nav>
+    <div class="col-sm-4 col-md-3 mx-auto quitar-float espacio-arriba text-center" id="principal">
+        <img src="imgs/icecream.png" class="col-4 col-md-8 quitar-float animated fadeIn">
+        <h1 class="pacifico grande verde animated fadeIn retraso-1">Food Truck</h1>
+
+        <div class="animated fadeInDown retraso-2">
+            <h2>Ven, come y diviértete</h2>        
+            <p>
+                Somos una empresa en donde nuestra prioridad es entregar productos de alta calidad!
+            </p>
+            <nav class="mediano">
+                <a href="menu.html" class="espacio-derecha">Menú</a>
+                <a href="contacto.html" class="espacio-derecha">Contacto</a>            
+            </nav>
+        </div>
+        
     </div>    
 </body>
 </html>
